test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/POST__api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 26 May 2025 05:07:57 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="cQwTOd3oja7yff8y0V7VC75qwqo3W6Pj", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 5

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}